# AITaxAgentW2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: release_template.md
.github/workflows/: ci.yml
data/docs/: 00_demo_disclaimer.md  01_w2_overview.md  02_w2_box_relationships.md  03_box12_codes_demo.md  04_basic_validation_checks.md  05_demo_qna_examples.md
demo/: README.md
docs/: AGENDA_NEXT.md  HOMEBREW_PLAN.md  RELEASE.md
docs/releases/: v0.1.10.md  v0.1.8.md  v0.1.9.md
scripts/: demo.sh
src/w2_agent/: cli.py  config.py  w2_validation.py
tests/: test_cli_validate.py  test_w2_validation.py
